FINAL fix for Bookmania rendering problems on Safari; use semi-bold instead of bold for Inter

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,13 +83,7 @@ blockquote {
 h1, h2, h3 {
     font-family: var(--font-serif);
     letter-spacing: 0em;
-}
-
-/* Nasty little hack to get type looking a little better on mobile Safari */
-@supports (-webkit-touch-callout: none) {
-    h1, h2, h3 {
-        letter-spacing: -0.03em;
-    }
+    font-weight: 500;
 }
 
 h1 {
